table works correctly on mobile and desktop

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -10,18 +10,15 @@ body {
   }
 
   // container
-
   .container {
     max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
     margin-inline: auto;
     padding-inline: var(--container-padding-x);
 
     @include tablet {
-      padding-inline: clamp(var(--container-padding-x), 10vw ,60px);
+      padding-inline: clamp(var(--container-padding-x), 3vw ,40px);
     }
-    @include desktop {
-      width: calc(var(--container-width) + var(--container-padding-x) * 2);
-    }
+
   }
 
   // elements
