--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,12 +255,7 @@ body {
 }
 @media ((min-width: 376px) and (max-width: 1261px)) {
   .container {
-    padding-inline: clamp(var(--container-padding-x), 10vw, 60px);
-  }
-}
-@media (min-width: 1262px) {
-  .container {
-    width: calc(var(--container-width) + var(--container-padding-x) * 2);
+    padding-inline: clamp(var(--container-padding-x), 3vw, 40px);
   }
 }
 
@@ -579,7 +574,16 @@ h4, .h4 {
     height: 528px;
   }
 }
-.overall-info table {
+.overall-info__comment {
+  margin-top: 30px;
+}
+@media (min-width: 1262px) {
+  .overall-info__comment {
+    margin-top: 38px;
+  }
+}
+
+table {
   margin-top: 44px;
   width: 100%;
   border-collapse: collapse;
@@ -589,84 +593,91 @@ h4, .h4 {
   font-weight: 600;
 }
 @media (max-width: 375px) {
-  .overall-info table {
+  table {
     margin-top: 20px;
   }
 }
-.overall-info table tr {
+table tr {
   height: 56px;
 }
 @media (max-width: 375px) {
-  .overall-info table tr {
+  table tr {
+    width: 100%;
     display: inline-block;
     border-bottom: var(--border-table-inner);
+    vertical-align: middle;
   }
 }
-.overall-info table th {
+table th {
   font-weight: 400;
   width: 322px;
   color: var(--color-table);
 }
-.overall-info table th,
-.overall-info table td {
+table th,
+table td {
   border: var(--border-table-inner);
   padding-inline: 16px;
   padding-block: auto;
   text-align: left;
 }
 @media (max-width: 375px) {
-  .overall-info table th,
-  .overall-info table td {
-    display: inline-block;
+  table th,
+  table td {
+    display: inline;
     border: none;
+    vertical-align: middle;
+    white-space: nowrap;
+    padding-inline: 6px;
   }
 }
-.overall-info table th span,
-.overall-info table td span {
+
+.border-none span {
   text-decoration: line-through;
   text-decoration-color: var(--color-accent);
   color: var(--color-main);
   font-weight: 700;
   margin-right: 12px;
 }
-.overall-info .border-none {
+
+.border-none {
   border-collapse: collapse;
   border: none;
 }
-.overall-info .border-none tr:first-child td {
+
+.border-none tr:first-child td {
   border-top: none;
 }
-.overall-info .border-none tr:last-child td {
+
+.border-none tr:last-child td {
   border-bottom: none;
 }
-.overall-info .border-none tr td:first-child {
+
+.border-none tr td:first-child {
   border-left: none;
 }
-.overall-info .border-none tr td:last-child {
+
+.border-none tr td:last-child {
   border-right: none;
 }
-.overall-info .border-none tr:first-child th {
+
+.border-none tr:first-child th {
   border-top: none;
 }
-.overall-info .border-none tr:last-child th {
+
+.border-none tr:last-child th {
   border-bottom: none;
 }
-.overall-info .border-none tr th:first-child {
+
+.border-none tr th:first-child {
   border-left: none;
 }
-.overall-info .border-none tr th:last-child {
+
+.border-none tr th:last-child {
   border-right: none;
 }
+
 @media (max-width: 375px) {
-  .overall-info .border-none tr:last-child {
+  .border-none tr:last-child {
     border-bottom: none;
-  }
-}
-.overall-info__comment {
-  margin-top: 30px;
-}
-@media (min-width: 1262px) {
-  .overall-info__comment {
-    margin-top: 38px;
   }
 }/*# sourceMappingURL=styles.css.map */
